# chiyocore

./: .clippy.toml  Cargo.toml  README.md  build.rs  build.sh  firmware.toml  flash.sh
.cargo/: config.toml
blossoms/boards/: e22p-test.toml  heltecv4.toml
blossoms/setups/: sample.ron  sample.toml
builder/: Cargo.toml
builder/blossoms/setups/: sample.toml
builder/res/: Cargo.toml  base_crate.toml  template.rs
builder/src/: board_def.rs  gen_cargo_conf.rs  gen_main.rs  main.rs
chiyo-hal/: Cargo.toml
chiyocore/: Cargo.toml  build.rs
chiyocore-config/: Cargo.toml
chiyocore-config/src/: codegen.rs  lib.rs
chiyocore/src/: boards.rs  builder.rs  crypto.rs  lib.rs  lora.rs  message_log.rs  ntp.rs  ping_bot.rs  psram_vec.rs  storage.rs  wifi.rs
chiyocore/src/simple_mesh/: mod.rs
chiyocore/src/simple_mesh/storage/: channel.rs  contact.rs  message_log.rs  mod.rs  packet_log.rs
companion/: Cargo.toml
companion/src/companion_protocol/: protocol.rs  tcp.rs
companion/src/companionv2/: build.rs  companion_proto_handler.rs  mod.rs
firmware/: Cargo.toml  README.md  build.rs  firmware.toml
firmware/.cargo/: config.toml
firmware/chiyo-hal/: Cargo.toml
firmware/chiyo-hal/src/: lib.rs  storage.rs
firmware/chiyo-ttc/: Cargo.toml  ca-bundle.pem
firmware/chiyo-ttc/src/: lib.rs
firmware/chiyocore/: Cargo.toml
firmware/chiyocore/src/: builder.rs  crypto.rs  lib.rs  lora.rs  ntp.rs  ping_bot.rs  psram_vec.rs  storage.rs  timing.rs  wifi.rs
firmware/chiyocore/src/simple_mesh/: layer.rs  mod.rs  packet_log.rs
firmware/chiyocore/src/simple_mesh/storage/: channel.rs  contact.rs  message_log.rs  mod.rs  packet_log.rs  shared_key_cache.rs
firmware/companion/: Cargo.toml
firmware/companion/src/: lib.rs
firmware/companion/src/companion_protocol/: mod.rs  protocol.rs  tcp.rs
firmware/companion/src/companionv2/: build.rs  companion_proto_handler.rs  mod.rs
firmware/firmware/: Cargo.toml  build.rs
firmware/firmware/src/: main.rs
firmware/src/: main.rs
src/: boards.rs  lib.rs  lora.rs  ntp.rs  partition_table.rs  ping_bot.rs  storage.rs  wifi.rs
src/companion/: mod.rs  protocol.rs  tcp.rs
src/companion/handler/: companion_handler.rs  message_log.rs  mod.rs  simple_companion.rs  storage.rs
src/companion_protocol/: protocol.rs  tcp.rs
src/companionv2/: mod.rs
src/simple_mesh/: mod.rs  packet_log.rs
src/simple_mesh/storage/: contact.rs  mod.rs  shared_key_cache.rs
