[package]
name = "chiyocore-builder"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chiyocore-config = { version = "0.1.0", path = "../chiyocore-config", features = ["codegen"] }
clap = { version = "4.6.0", features = ["derive"] }
genco = "0.19.0"
ron = "0.12.1"
rust-format = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

