[package]
name = "chiyocore-config"
version = "0.1.0"
edition = "2024"

[dependencies]
genco = { version = "0.19.0", optional = true }
litemap = { version = "0.8.2", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }

[features]
codegen = ["dep:genco"]
std = []
default = [ "std", "codegen" ]
