[package]
name = "chiyocore-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "chiyocore"
path = "./src/main.rs"

[dependencies]
arrayref = "0.3.9"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bumpalo = { version = "3.20.2", default-features = false, features = ["collections"] }
chiyocore = { path = "../chiyocore" }
chiyocore-config = { path = "../../chiyocore-config", default-features = false }
chiyocore-companion = { path = "../companion" }
const-hex = { version = "1.18.1", default-features = false, features = ["alloc"] }
critical-section = "1.2.0"
ed25519-compact = { version = "2.2.0", default-features = false }
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "udp",
  "medium-ethernet",
  "dns",
  "tcp",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io-async = "0.7.0"
embedded-storage = "0.3.1"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "nightly"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "log-04"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "log-04", "psram", "unstable"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "wifi", "esp-alloc", "unstable"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3", "log-04"] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = [
  "bytewise-read",
  "esp-hal",
  "esp-sync",
  "esp32s3",
] }
esp-sync = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3"] }
futures-util = { version = "0.3.32", default-features = false }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
hmac = { version = "0.12.1", default-features = false }
itoa = "1.0.18"
litemap = "0.8.1"
littlefs2 = { git = "https://github.com/kore-signet/littlefs2.git", features = ["alloc", "c-stubs", "log-all", "log-error", "log-info", "log-trace", "log-debug", "log-warn", "ll-trace"] }
log = "0.4.27"
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git" }
memchr = { version = "2.8.0", default-features = false, features = ["alloc"] }
meshcore = { git = "https://github.com/kore-signet/meshcore.git" }
modular-bitfield = { version = "0.13.1", default-features = false }
ouroboros = { version = "0.18.5", default-features = false }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = { version = "0.9", default-features = false }
sequential-storage = { version = "7.1.0", features = ["alloc", "postcard"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10.8", default-features = false }
smallvec = { version = "1.15.1", features = [
  "serde",
  "union",
  "const_generics",
  "const_new",
] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
sntpc = { version = "0.8.1", default-features = false, features = ["log"] }
sntpc-net-embassy = "0.8.0"
static_cell = { version = "2.1.1", features = ["nightly"] }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
thingbuf = { git = "https://github.com/kore-signet/thingbuf.git", default-features = false, features = ["alloc", "static"] }

[build-dependencies]
genco = "0.19.0"
toml = "1"
serde = { version = "1", features = ["derive"] }
project-root = "0.2.2"

[lints]
workspace = true