[package]
name = "chiyo-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.6.0" }
embassy-executor = { version = "0.10", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.9.0", features = [
  "dhcpv4",
  "udp",
  "medium-ethernet",
  "dns",
  "tcp",
  "defmt"
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0" }
esp-alloc = { version = "0.10.0", features = ["esp32s3", "nightly"] }
esp-hal = { version = "1.1.0-rc.0", features = ["esp32s3", "defmt", "unstable"] }
esp-println = { version = "0.17.0",  features = ["esp32s3", "defmt-espflash"] }
esp-radio = { version = "0.18.0",  features = ["esp32s3", "wifi", "esp-alloc", "unstable"] }
esp-storage = { version = "0.9.0",  features = [
  "bytewise-read",
  "esp-hal",
  "esp-sync",
  "esp32s3",
] }
esp-backtrace = { version = "0.19.0",  features = ["defmt", "esp32s3", "panic-handler"] }
esp-sync = { version = "0.2.1",  features = ["esp32s3"] }
esp-rtos = { version = "0.3.0",  features = ["esp32s3", "esp-alloc", "esp-radio", "defmt", "alloc", "embassy"] }
embedded-storage = "0.3.1"
bytemuck = "1.25.0"
xxhash-rust = { version = "0.8.15", default-features = false, features = ["xxh64", "const_xxh64", "xxh32", "const_xxh32"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
defmt = "1.0.1"
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git" }
static_cell = "2.1.1"
sequential-storage = { version = "7.2.0", features = ["alloc", "defmt"] }
arrayref = "0.3.9"
meshcore = { git = "https://github.com/kore-signet/meshcore.git", features = ["defmt"] }

[lints]
workspace = true
