[package]
name = "chiyocore-ttc"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chiyocore = { path = "../chiyocore" }
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "udp",
  "medium-ethernet",
  "dns",
  "tcp",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io-async = "0.7.0"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "nightly"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "log-04", "psram", "unstable"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "wifi", "esp-alloc", "unstable"] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = [
  "bytewise-read",
  "esp-hal",
  "esp-sync",
  "esp32s3",
] }
esp-sync = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3"] }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
log = "0.4.27"
rand = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
chiyocore-config = { path = "../../chiyocore-config", default-features = false }
mbedtls-rs = { git = "https://github.com/esp-rs/mbedtls-rs.git", version = "0.1.0", default-features = false, features = ["log", "esp32s3", "edge-nal"] }
edge-http = "0.7.0"
edge-nal-embassy = { version = "0.8.1", default-features = false, features = ["tcp", "proto-ipv4", "medium-ip", "dhcpv4", "dns"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

[lints]
workspace = true

