[package]
name = "chiyocore-ttc"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chiyocore = { path = "../chiyocore" }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
chiyocore-config = { path = "../../chiyocore-config", default-features = false }
mbedtls-rs = { git = "https://github.com/esp-rs/mbedtls-rs.git", version = "0.1.0", default-features = false, features = ["defmt", "esp32s3", "edge-nal"] }
edge-http = { version = "0.7.0", features = ["defmt"] }
edge-nal-embassy = { version = "0.8.1", default-features = false, features = ["tcp", "proto-ipv4", "medium-ip", "dhcpv4", "dns", "defmt"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
chiyo-hal = { path = "../chiyo-hal" }
embassy-executor = { version = "0.10", features = ["defmt"] }
defmt = { version = "1", features = ["alloc"] }

[lints]
workspace = true

