[package]
name = "chiyocore"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
arrayref = "0.3.9"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bumpalo = { version = "3.20.2", default-features = false, features = ["collections"] }
const-hex = { version = "1.18.1", default-features = false, features = ["alloc"] }
critical-section = "1.2.0"
ed25519-compact = { version = "2.2.0", default-features = false }
embassy-executor = { version = "0.10", features = ["defmt"] }
futures-util = { version = "0.3.32", default-features = false }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
hmac = { version = "0.12.1", default-features = false }
itoa = "1.0.18"
litemap = { version = "0.8.2", features = ["serde"] }
littlefs2 = { git = "https://github.com/kore-signet/littlefs2.git", features = ["alloc", "c-stubs"] }
lora-phy = { git = "https://github.com/kore-signet/lora-rs.git" }
memchr = { version = "2.8.0", default-features = false, features = ["alloc"] }
meshcore = { git = "https://github.com/kore-signet/meshcore.git" }
modular-bitfield = { version = "0.13.1", default-features = false }
ouroboros = { version = "0.18.5", default-features = false }
postcard = { version = "1.1.3", features = ["alloc", "defmt"] }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10.8", default-features = false }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
sntpc = { git = "https://github.com/borisfaure/sntpc.git", branch = "bump-embassy-net-0.9", default-features = false, features = ["defmt"] }
sntpc-net-embassy = { git = "https://github.com/borisfaure/sntpc.git", branch = "bump-embassy-net-0.9" }
static_cell = { version = "2.1.1" }
thingbuf = { git = "https://github.com/kore-signet/thingbuf.git", default-features = false, features = ["alloc", "static"] }
sequential-storage = { version = "7.1.0", features = ["alloc", "postcard"] }
pastey = "0.2.1"
chiyocore-config = { path = "../../chiyocore-config", default-features = false }
maitake-sync = "0.3.0"
chiyo-hal = { path = "../chiyo-hal" }
defmt = { version = "1", features = ["alloc"] }

[build-dependencies]
convert_case = "0.11.0"
csv = "1.4.0"

[lints]
workspace = true
