[package]
name = "chiyocore-companion"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
arrayref = "0.3.9"
chiyocore = { path = "../chiyocore" }
const-hex = { version = "1.18.1", default-features = false, features = ["alloc"] }
ed25519-compact = { version = "2.2.0", default-features = false }
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "udp",
  "medium-ethernet",
  "dns",
  "tcp",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io-async = "0.7.0"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "nightly"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "log-04", "psram", "unstable"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "wifi", "esp-alloc", "unstable"] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = [
  "bytewise-read",
  "esp-hal",
  "esp-sync",
  "esp32s3",
] }
esp-sync = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3"] }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
litemap = "0.8.2"
littlefs2 = { git = "https://github.com/kore-signet/littlefs2.git", features = ["alloc", "c-stubs", "log-all", "log-error", "log-info", "log-trace", "log-debug", "log-warn", "ll-trace"] }
log = "0.4.27"
memchr = { version = "2.8.0", default-features = false, features = ["alloc"] }
modular-bitfield = { version = "0.13.1", default-features = false }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
smallvec = { version = "1.15.1", features = [
  "serde",
  "union",
  "const_generics",
  "const_new",
] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
thingbuf = { git = "https://github.com/kore-signet/thingbuf.git", default-features = false, features = ["alloc", "static"] }
chiyocore-config = { path = "../../chiyocore-config", default-features = false }

[lints]
workspace = true
