[package]
name = "chiyocore-companion"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
arrayref = "0.3.9"
chiyocore = { path = "../chiyocore" }
chiyo-hal = { path = "../chiyo-hal" }
const-hex = { version = "1.18.1", default-features = false, features = ["alloc"] }
ed25519-compact = { version = "2.2.0", default-features = false }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
litemap = "0.8.2"
memchr = { version = "2.8.0", default-features = false, features = ["alloc"] }
modular-bitfield = { version = "0.13.1", default-features = false }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
smallvec = { version = "1.15.1", features = [
  "serde",
  "union",
  "const_generics",
  "const_new",
] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
thingbuf = { git = "https://github.com/kore-signet/thingbuf.git", default-features = false, features = ["alloc", "static"] }
embassy-executor = { version = "0.10", features = ["defmt"] }
defmt = { version = "1.0.1", features = ["alloc"] }
postcard = { version = "1.1.3", features = ["alloc"] }

[lints]
workspace = true
