[package]
name = "chiyocore-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "chiyocore"
path = "./src/main.rs"

[dependencies]
chiyocore = { path = "../chiyocore" }
chiyocore-ttc = { path = "../chiyo-ttc" }
chiyocore-config = { path = "../../chiyocore-config", default-features = false }
chiyocore-companion = { path = "../companion" }
ed25519-compact = { version = "2.2.0", default-features = false }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "udp",
  "medium-ethernet",
  "dns",
  "tcp",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "nightly"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "log-04"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["esp32s3", "log-04", "psram", "unstable"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3", "wifi", "esp-alloc", "unstable"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3", "log-04"] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = [
  "bytewise-read",
  "esp-hal",
  "esp-sync",
  "esp32s3",
] }
esp-sync = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ab7a8e746c292c9c7c5a39a7fc9e4d8c01e70cbf",  features = ["esp32s3"] }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
litemap = "0.8.1"
littlefs2 = { git = "https://github.com/kore-signet/littlefs2.git", features = ["alloc", "c-stubs", "log-all", "log-error", "log-info", "log-trace", "log-debug", "log-warn", "ll-trace"] }
log = "0.4.27"
rand = { version = "0.9", default-features = false }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }


[lints]
workspace = true