[package]
name = "chiyocore-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "chiyocore"
path = "./src/main.rs"

[dependencies]
chiyocore = { path = "../chiyocore" }
# chiyocore-ttc = { path = "../chiyo-ttc" }
chiyocore-config = { path = "../../chiyocore-config", default-features = false }
chiyocore-companion = { path = "../companion" }
ed25519-compact = { version = "2.2.0", default-features = false }
embassy-executor = { version = "0.10", features = ["defmt"] }
chiyo-hal = { path = "../chiyo-hal" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "91c776f5c95ac7c3027d12569e2cfdebacfefc73",  features = ["esp32s3"] }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
litemap = "0.8.1"
littlefs2 = { git = "https://github.com/kore-signet/littlefs2.git", features = ["alloc", "c-stubs"] }
rand = { version = "0.9", default-features = false }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
defmt = { version = "1.0.1", features = ["alloc"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "91c776f5c95ac7c3027d12569e2cfdebacfefc73",  features = ["esp32s3", "esp-alloc", "esp-radio", "defmt", "alloc"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "91c776f5c95ac7c3027d12569e2cfdebacfefc73", features = ["esp32s3", "nightly"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "91c776f5c95ac7c3027d12569e2cfdebacfefc73", features = ["esp32s3", "defmt", "psram", "unstable"] }


[lints]
workspace = true